--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.11.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
